# slicenrmapi-server

./: README.md  openapi.yaml  setup.cfg  setup.py
.openapi-generator/: FILES
docs/models/: ACCLDisallowedAttributes.md  AccessType.md  AccessTypeRm.md  AckState.md  ActivityFactorTarget.md  AddressWithVlan.md  AdministrativeState.md  AfSigProtocol.md  AlarmListSingle.md  AlarmNotificationTypes.md  AlarmRecord.md  AlarmType.md  AmfFunctionMultiple.md  AmfFunctionSingle.md  AmfIdentifier.md  AmfPointer.md  AmfRegionId.md  AmfRegionMultiple.md  AmfRegionSingle.md  AmfSetId.md  AmfSetMultiple.md  AmfSetSingle.md  AnonymizationOfMDTDataType.md  ApplicationDescriptor.md  AreaConfig.md  AreaOfInterest.md  AreaScope.md  Arp.md  ArpPriorityLevel.md  AssuranceClosedControlLoopMultiple.md  AssuranceClosedControlLoopSingle.md  AssuranceGoalMultiple.md  AssuranceGoalSingle.md  AssuranceGoalStatus.md  AssuranceGoalStatusList.md  AssuranceGoalStatusObserved.md  AssuranceGoalStatusPredicted.md  AssuranceReportSingle.md  AssuranceScope.md  AssuranceTarget.md  (+666 more)
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
openapi_client/apis/: path_to_api.py
openapi_client/model/: access_type.py  access_type.pyi  access_type_rm.py  accl_disallowed_attributes.py  ack_state.py  ack_state.pyi  activity_factor_target.py  activity_factor_target.pyi  address_with_vlan.py  address_with_vlan.pyi  administrative_state.py  administrative_state.pyi  af_sig_protocol.py  af_sig_protocol.pyi  alarm_list_single.py  alarm_record.pyi  (+915 more)
tests/: test_default_api.py
(+1505 files in other folders)
